[package]
name = "rcli"
version = "0.1.0"
authors = ["Stardust <2032153705@qq.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
toml = "1.1.2"
zxcvbn = "3.1.1"
