[package]
name = "rcli"
version = "0.1.0"
authors = ["Stardust <2032153705@qq.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.10.1"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "net", "fs", "tokio-macros"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zxcvbn = "3.1.1"
